--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@
 .labelmaker{
     align-items: center;
     padding: 2px;
-    width: 150px;
-    text-align: center;
+    /* width: 150px; */
+    /* text-align: center; */
     font-family:"anta";
     font-size:larger;
     margin: 4px ;
@@ -46,7 +46,7 @@
     border-color: rgba(240, 248, 255, 0.259);
     background-color: rgba(240, 248, 255, 0.259);
     padding: 2px;
-    width: 250px;
+    width: 200px;
     text-align: center;
     display: flex;
     font-size:larger;
@@ -76,8 +76,14 @@
 }
 #imageContainer{
     text-align: center;
-    margin-top: 40px;
+    margin-top:    10px;
+    margin-bottom: 40px;
 }
 #qrimg{
     /* height: 300px; */
+}
+#admin_link{
+    /* display: flex; */
+    margin-bottom: 10px;
+    margin-left: 10px;
 }
