--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
 .boxy:hover{
     background-color: rgba(241, 244, 246, 0.63);
 }
-#go{
+#download{
     background-color: rgb(50, 113, 116);
     color: rgb(255, 255, 255);
     width:  150px;
@@ -64,7 +64,7 @@
     padding: 5px;
     white-space: nowrap;
 }
-#go:hover{
+#download:hover{
     background-color: rgb(36, 83, 86);
 }
 #campus{
@@ -86,4 +86,9 @@
     /* display: flex; */
     margin-bottom: 10px;
     margin-left: 10px;
+}
+#reader{
+    width:  500px;
+    height: auto;
+    margin: auto; 
 }
