--- a/style.css
+++ b/style.css
@@ -92,3 +92,11 @@
     height: auto;
     margin: auto; 
 }
+@media only screen and (max-width: 600px) {
+     /* #reader{ */
+        /* width:  100vh; */
+        /* height: 100vh; */
+        /* margin: auto;  */
+    /* }  */
+}
+ 
