--- a/style.css
+++ b/style.css
@@ -87,16 +87,24 @@
     margin-bottom: 10px;
     margin-left: 10px;
 }
+video{
+    height: 300px;
+}
 #reader{
+    /* align-items: center; */
     width:  500px;
-    height: auto;
-    margin: auto; 
+    /* height: 500px;  */
+    margin: 0 auto ; 
 }
 @media only screen and (max-width: 600px) {
-     /* #reader{ */
-        /* width:  100vh; */
-        /* height: 100vh; */
-        /* margin: auto;  */
-    /* }  */
+     #reader{
+        width:  100%;
+        height: 100%;
+        margin: auto; 
+    } 
+    video{
+        width: 300px;
+        margin: 0;
+    }
 }
  
