--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ video{
     video{
         overflow: hidden;
         width: 300px;
-        height: 300px;
+        height: auto;
         margin: 0;
     }
 }
